button adding and fixed some layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,13 @@
 .panel-group {
 	margin-top:30px;
 }
+
+#myTopics .btn, #categoryTopics .btn {
+	margin:5px;
+}
+@media screen and (max-width: 768px) {
+	.panel-body {
+		padding-bottom: 0px;
+	}
+	
+}
